@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-14T08:07:44Z",
-  "count_outdated" : 69,
-  "uniques_outdated" : 57,
-  "count" : 74,
-  "uniques" : 62,
+  "timestamp" : "2022-09-15T00:35:40Z",
+  "count_outdated" : 75,
+  "uniques_outdated" : 62,
+  "count" : 79,
+  "uniques" : 66,
   "clones" : [
-    {
-      "timestamp": "2022-08-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 5 ]
-    },
     {
       "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
