@@ -1,12 +1,7 @@
 {
-  "count": 5,
-  "uniques": 2,
+  "count": 4,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2022-08-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
