@@ -1,3 +1,11 @@
+2022-09-15T00:35:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057002074
+* notice: last 14d: unq all: 1 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 57 69 / 62 74
+* notice: next accum: outdated-unq outdated-all / unq all: 62 75 / 66 79
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-31] / []
+
 2022-09-14T08:07:44Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3051155094
 * notice: last 14d: unq all: 2 5
